--- a/css/cards.css
+++ b/css/cards.css
@@ -1,16 +1,11 @@
 /*PEN STYLES*/
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
 
 body {
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#96fbc4), to(#f9f586));
   background-image: linear-gradient(to top, #96fbc4 0%, #f9f586 100%);
   background-repeat: no-repeat;
 }
 
-.main-columns {
+.container {
   display: -ms-grid;
   display: grid;
 }
@@ -21,11 +16,11 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   margin: 1rem auto;
   -webkit-box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
   margin-bottom: 1.6%;
   line-height: 1.4;
   font-family: sans-serif;
@@ -44,7 +39,7 @@ body {
 
 .blog-card:hover .photo {
   -webkit-transform: scale(1.3) rotate(3deg);
-          transform: scale(1.3) rotate(3deg);
+  transform: scale(1.3) rotate(3deg);
 }
 
 .blog-card .meta {
@@ -61,10 +56,10 @@ body {
   left: 0;
   background-size: cover;
   background-position: center;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 .blog-card .details,
@@ -80,18 +75,18 @@ body {
   bottom: 0;
   left: -100%;
   margin: auto;
-  -webkit-transition: left .2s;
-  transition: left .2s;
+  -webkit-transition: left 0.2s;
+  transition: left 0.2s;
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
   padding: 10px;
   width: 100%;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .blog-card .details a {
   -webkit-text-decoration: dotted underline;
-          text-decoration: dotted underline;
+  text-decoration: dotted underline;
 }
 
 .blog-card .details ul li {
@@ -166,8 +161,8 @@ body {
   margin-left: -10px;
   opacity: 0;
   vertical-align: middle;
-  -webkit-transition: margin .3s, opacity .3s;
-  transition: margin .3s, opacity .3s;
+  -webkit-transition: margin 0.3s, opacity 0.3s;
+  transition: margin 0.3s, opacity 0.3s;
 }
 
 .blog-card .description .read-more a:hover:after {
@@ -198,49 +193,4 @@ body {
   left: 0%;
 }
 
-@media (min-width: 640px) {
-  .blog-card {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    max-width: 700px;
-  }
-  .blog-card .meta {
-    -ms-flex-preferred-size: 40%;
-        flex-basis: 40%;
-    height: auto;
-  }
-  .blog-card .description {
-    -ms-flex-preferred-size: 60%;
-        flex-basis: 60%;
-  }
-  .blog-card .description:before {
-    -webkit-transform: skewX(-3deg);
-            transform: skewX(-3deg);
-    content: "";
-    background: #fff;
-    width: 30px;
-    position: absolute;
-    left: -10px;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
-  }
-  .blog-card.alt {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-  }
-  .blog-card.alt .description:before {
-    left: inherit;
-    right: -10px;
-    -webkit-transform: skew(3deg);
-            transform: skew(3deg);
-  }
-  .blog-card.alt .details {
-    padding-left: 25px;
-  }
-}
 /*# sourceMappingURL=cards.css.map */
