--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import url(navigation.css);
+@import url(header.css);
 @import url(cards.css);
 @import url(smallcard.css);
 @import url(mediaqueries.css);
+@import url(footer.css);
