--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -27,7 +27,7 @@
   }
 
   .header-img {
-    width: 95%;
+    width: 100%;
     height: auto;
   }
 
@@ -37,11 +37,15 @@
     font-size: 0.875em;
     width: 50%;
   }
+
+  .logo {
+    margin-left: -4em;
+  }
 }
 
 @media screen and (min-width: 960px) {
   .header-img {
-    width: 40%;
+    width: 60%;
     height: auto;
   }
 }
